SNSが終了したのに伴いクエスト状況を除外、GitHubリンクを追加

--- a/index.html
+++ b/index.html
@@ -66,11 +66,15 @@
 				</li>
 			</ul>
 
-			<h3>ROツール</h3>
+			<h3>計算機以外</h3>
 			<ul>
 				<li>
-					<a href="rotool/ROQuestTable.html">クエスト集計</a><br/>
-					… クエストのクリア人数や、どのキャラがクリアしているかを確認できます。
+					<a href="https://github.com/full-deviation/rocalc" target="_blank">GitHub: full-deviation/rocalc</a><br/>
+					… このサイトのソースを設置しています。
+				</li>
+				<li>
+					<a href="https://github.com/full-deviation/rochrome" target="_blank">GitHub: full-deviation/rochrome</a><br/>
+					… Chrome拡張機能による公式Webツールや関連サイトに拡張機能を提供しています。
 				</li>
 			</ul>
 		</div>
