周回精錬を追加

--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
 				</li>
 			</ul>
 
+			<h3>ROツール</h3>
+			<ul>
+				<li>
+					<a href="rotool/RORefine.html">周回精錬</a><br/>
+					… 前回の状態を引き継ぐ精錬を指定された回数まで計算します。
+				</li>
+			</ul>
+
 			<h3>計算機以外</h3>
 			<ul>
 				<li>
