最終結果のみ表示モード追加

--- a/rotool/RORefine.html
+++ b/rotool/RORefine.html
@@ -189,7 +189,9 @@
 							</select>
 						</td>
 						<td class="identify">試行回数</td>
-						<td><input id="p_TryCount" class="numeric" value="100"/> 回</td>
+						<td><input id="p_TryCount" class="numeric" value="100"/> 回
+							(<input id="p_OnlyLast" type="checkbox" checked="checked"/> 最終結果のみ)
+						</td>
 					</tr>
 				</tbody>
 			</table>
