最終結果のみ表示はデフォルトOFFに変更

--- a/rotool/RORefine.html
+++ b/rotool/RORefine.html
@@ -190,7 +190,7 @@
 						</td>
 						<td class="identify">試行回数</td>
 						<td><input id="p_TryCount" class="numeric" value="100"/> 回
-							(<input id="p_OnlyLast" type="checkbox" checked="checked"/> 最終結果のみ)
+							(<input id="p_OnlyLast" type="checkbox"/> 最終結果のみ)
 						</td>
 					</tr>
 				</tbody>
