記載を色々変更

--- a/rotool/RORefine.html
+++ b/rotool/RORefine.html
@@ -190,7 +190,7 @@
 						</td>
 						<td class="identify">試行回数</td>
 						<td><input id="p_TryCount" class="numeric" value="100"/> 回
-							(<input id="p_OnlyLast" type="checkbox"/> 最終結果のみ)
+							(<input id="p_OnlyLast" type="checkbox"/> 最終結果のみ表示)
 						</td>
 					</tr>
 				</tbody>
@@ -226,7 +226,13 @@
 
 			<h3>このツールについて</h3>
 			<p>
-				改良濃縮や究極精錬などの前回の状態を引き継ぐ精錬を、何回分を目安に実行すれば安心できそうかを計算します。<br/>
+				改良濃縮や究極精錬などの破壊せず前回の状態を引き継ぐ精錬を、1つの装備に対して何回分を目安に実行すれば安心できそうかを計算します。<br/>
+				行なっていることは単純で
+				<ol>
+					<li>+4～+10とラベルの付いた0～100%が入る箱を用意する。</li>
+					<li>開始精錬値の箱に初期値として100%を入れ、それ以外の箱には0%を入れる。</li>
+					<li>各精錬値の箱に対し<code>[N]回目に精錬値[S]になる確率</code>の計算を行ない、1巡したら結果を箱に入れ直す。</li>
+				</ol>
 				確率上は安定であってもその通りになるとは限らないことと、小数の掛け合わせをし続けると誤差が発生することに注意してください。
 			</p>
 
@@ -235,19 +241,38 @@
 				失敗しても装備が破壊されない代わりに精錬値が-1されます。<br/>
 				主にラグ缶でランダム排出される改良濃縮オリデオコンまたは改良濃縮エルニウムを用いて、モロクのアビダブに依頼します。
 			</p>
+			<code>[N]回目に精錬値[S]になる確率 = [N-1]回目に精錬値[S-1]になる確率 * 精錬値[S]の成功率
+				                               + [N-1]回目に精錬値[S+1]になる確率 * (100% - 精錬値[S+2]の成功率)</code>
+			<ul>
+				<li>精錬値[S+1]が終了精錬値の場合は<code>+ [N-1]回目に精錬値[S+1]になる確率 * (100% - 精錬値[S+2]の成功率)</code>を使用しない。</li>
+				<li>精錬値[S]が終了精錬値の場合は<code>+ [N-1]回目に精錬値[S+1]になる確率 * (100% - 精錬値[S+2]の成功率)</code>を使用しない。
+					代わりに<code>[N-1]回目に精錬値[S]になる確率</code>を加算する。</li>
+			</ul>
 
 			<h3>究極精錬</h3>
 			<p>
 				失敗しても装備が破壊されず精錬値を維持します。<br/>
 				指定された期間にラグナロクネットストアで規定の額を購入する毎に期間後に配布される究極精錬チケットを用いて、イズルードのレイブンに依頼します。
 			</p>
-
+			<code>[N]回目に精錬値[S]になる確率 = [N-1]回目に精錬値[S-1]になる確率 * 精錬値[S]の成功率
+				                               + [N-1]回目に精錬値[S]になる確率 * (100% - 精錬値[S+1]の成功率)</code>
+			<ul>
+				<li>精錬値[S+1]が終了精錬値の場合は<code>+ [N-1]回目に精錬値[S]になる確率 * (100% - 精錬値[S+1]の成功率)</code>を使用しない。</li>
+				<li>精錬値[S]が終了精錬値の場合は<code>+ [N-1]回目に精錬値[S]になる確率 * (100% - 精錬値[S+1]の成功率)</code>を使用しない。
+					代わりに<code>[N-1]回目に精錬値[S]になる確率</code>を加算する。</li>
+			</ul>
+								
 			<h3>ミラクル精錬</h3>
 			<p>
-				失敗しても装備が破壊されない代わりに精錬値が0になります。<br/>
+				失敗しても装備が破壊されない代わりに精錬値が0になります。(計算機上は+4に戻ったことにしています)<br/>
 				主に4～6月に季節イベントとして開催され、その期間中にイベントで依頼された内容をこなすことでポイントを貯めて、約4日に1回のミラクル精錬デーに特設マップでNPCに依頼します。<br/>
 				確率は<a href="https://ro-blog.livedoor.biz/archives/5354035.html" target="_blank">公式ブログ</a>に明示されているため、入力した確率を参照しません。
 			</p>
+			<code>[N]回目に精錬値[S]になる確率 = [N-1]回目に精錬値[S-1]になる確率 * 精錬値[S]の成功率</code>
+			<ul>
+				<li>精錬値[S]が終了精錬値の場合は<code>+ [N-1]回目に精錬値[S-1]になる確率 * 精錬値[S]の成功率</code>を使用しない。
+					代わりに<code>[N-1]回目に精錬値[S]になる確率</code>を加算する。</li>
+			</ul>
 
 			<!-- 本サイト上でない場合のみ表示 -->
 			<div id="about-Author" style="display: none;">
