権利表記、Roween削除、VIPRO追加

--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
 					… 露店として出された値段を見るのにお世話になっています。<br/>
 					アイテム名がURLに入るので、アイテムIDが不明なアイテム名の一覧から値段を調べるのにお世話になっています。
 				</li>
+				<li>
+					<a href="http://rovip.info/wiki/" target="_blank">VIPでRO！本鯖編 Wiki</a><br/>
+					… jRO(日本版)に関して色々な職や育成や金策情報など色々書かれている総合wikiです。<br/>
+					濃縮精錬の成功率を仮入力する時はいつもここのを使用しています。
+				</li>
 			</ul>
 		</div>
 
@@ -152,5 +157,11 @@
 			</ul>
 		</div>
 	</div>
+
+	<!-- 権利表記 -->
+	<p>
+		©Gravity Co., Ltd. & LeeMyoungJin(studio DTDS) All rights reserved.<br/>
+		©GungHo Online Entertainment, Inc. All Rights Reserved.
+	</p>
 </body>
 </html>
