--- a/rocreation/ROBlacksmith.html
+++ b/rocreation/ROBlacksmith.html
@@ -3340,10 +3340,13 @@
 
 			<h3>価格の初期値について</h3>
 			<ul>
-				<li>背景色が緑のものはNPC購入可能アイテム(参考: <a href="https://roween.lies.jp/" target="_blank">Roween</a>)で、
-					ディスカウント可能なものは初期値をディスカウントLv10(-24%)による価格としています。</li>
+				<li>
+					背景色が緑のものはNPC購入可能アイテムで、ディスカウント可能なものは初期値をディスカウントLv10(-24%)による価格としています。
+				</li>
+				<li>
 					NPC購入不可アイテムの初期値は、<a href="https://rotool.gungho.jp/torihiki/" target="_blank">RO公式ツール・露店取引情報</a>
 					2019/05/25 Breidablikワールド中央値、または取引履歴がないものはオーバーチャージLv10(+24%)による価格としています。
+				</li>
 			</ul>
 		</div>
 
@@ -3383,7 +3386,6 @@
 						<li><a href="http://rrenewal-ro.daa.jp/skill_rb_blacksmith.html#Smith_Mace" target="_blank">メイス製作</a></li>
 					</ul>
 				</li>
-				<li><a href="https://roween.lies.jp/" target="_blank">Roween</a></li>
 				<li><a href="https://rotool.gungho.jp/torihiki/" target="_blank">RO公式ツール・露店取引情報</a></li>
 			</ul>
 
@@ -3406,5 +3408,11 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- 権利表記 -->
+	<p>
+		©Gravity Co., Ltd. & LeeMyoungJin(studio DTDS) All rights reserved.<br/>
+		©GungHo Online Entertainment, Inc. All Rights Reserved.
+	</p>
 </body>
 </html>
