--- a/rotool/RORefine.html
+++ b/rotool/RORefine.html
@@ -299,5 +299,11 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- 権利表記 -->
+	<p>
+		©Gravity Co., Ltd. & LeeMyoungJin(studio DTDS) All rights reserved.<br/>
+		©GungHo Online Entertainment, Inc. All Rights Reserved.
+	</p>
 </body>
 </html>
