--- a/rocreation/ROCooking.html
+++ b/rocreation/ROCooking.html
@@ -1395,8 +1395,7 @@
 			<h3>価格の初期値について</h3>
 			<ul>
 				<li>
-					背景色が緑のものはNPC購入可能アイテム(参考: <a href="https://roween.lies.jp/" target="_blank">Roween</a>)で、
-					ディスカウント可能なものは初期値をディスカウントLv10(-24%)による価格としています。
+					背景色が緑のものはNPC購入可能アイテムで、ディスカウント可能なものは初期値をディスカウントLv10(-24%)による価格としています。
 				</li>
 				<li>
 					NPC購入不可アイテムの初期値は、<a href="https://rotool.gungho.jp/torihiki/" target="_blank">RO公式ツール・露店取引情報</a>
@@ -1422,7 +1421,6 @@
 						<li><a href="http://www.roquest.work/index.php?%E6%96%99%E7%90%86" target="_blank">料理</a></li>
 					</ul>
 				</li>
-				<li><a href="https://roween.lies.jp/" target="_blank">Roween</a></li>
 				<li><a href="https://rotool.gungho.jp/torihiki/" target="_blank">RO公式ツール・露店取引情報</a></li>
 			</ul>
 
@@ -1451,5 +1449,11 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- 権利表記 -->
+	<p>
+		©Gravity Co., Ltd. & LeeMyoungJin(studio DTDS) All rights reserved.<br/>
+		©GungHo Online Entertainment, Inc. All Rights Reserved.
+	</p>
 </body>
 </html>
