説明文の修正

--- a/rotool/RORefine.html
+++ b/rotool/RORefine.html
@@ -242,11 +242,11 @@
 				主にラグ缶でランダム排出される改良濃縮オリデオコンまたは改良濃縮エルニウムを用いて、モロクのアビダブに依頼します。
 			</p>
 			<code>[N]回目に精錬値[S]になる確率 = [N-1]回目に精錬値[S-1]になる確率 * 精錬値[S]の成功率
-				                               + [N-1]回目に精錬値[S+1]になる確率 * (100% - 精錬値[S+2]の成功率)</code>
+				                               + [N-1]回目に精錬値[S+1]になる確率 * 精錬値[S+2]の失敗率</code>
 			<ul>
-				<li>精錬値[S+1]が終了精錬値の場合は<code>+ [N-1]回目に精錬値[S+1]になる確率 * (100% - 精錬値[S+2]の成功率)</code>を使用しない。</li>
-				<li>精錬値[S]が終了精錬値の場合は<code>+ [N-1]回目に精錬値[S+1]になる確率 * (100% - 精錬値[S+2]の成功率)</code>を使用しない。
-					代わりに<code>[N-1]回目に精錬値[S]になる確率</code>を加算する。</li>
+				<li>精錬値[S+1]が終了精錬値の場合は<code>+ [N-1]回目に精錬値[S+1]になる確率 * 精錬値[S+2]の失敗率</code>を使用しない。</li>
+				<li>精錬値[S]が終了精錬値の場合は<code>+ [N-1]回目に精錬値[S+1]になる確率 * 精錬値[S+2]の失敗率</code>を使用しない。
+					代わりに<code>[N-1]回目に精錬値[S]になる確率(= 前回までに成功している確率)</code>を加算する。</li>
 			</ul>
 
 			<h3>究極精錬</h3>
@@ -255,11 +255,11 @@
 				指定された期間にラグナロクネットストアで規定の額を購入する毎に期間後に配布される究極精錬チケットを用いて、イズルードのレイブンに依頼します。
 			</p>
 			<code>[N]回目に精錬値[S]になる確率 = [N-1]回目に精錬値[S-1]になる確率 * 精錬値[S]の成功率
-				                               + [N-1]回目に精錬値[S]になる確率 * (100% - 精錬値[S+1]の成功率)</code>
+				                               + [N-1]回目に精錬値[S]になる確率 * 精錬値[S+1]の失敗率</code>
 			<ul>
-				<li>精錬値[S+1]が終了精錬値の場合は<code>+ [N-1]回目に精錬値[S]になる確率 * (100% - 精錬値[S+1]の成功率)</code>を使用しない。</li>
-				<li>精錬値[S]が終了精錬値の場合は<code>+ [N-1]回目に精錬値[S]になる確率 * (100% - 精錬値[S+1]の成功率)</code>を使用しない。
-					代わりに<code>[N-1]回目に精錬値[S]になる確率</code>を加算する。</li>
+				<li>精錬値[S+1]が終了精錬値の場合は<code>+ [N-1]回目に精錬値[S]になる確率 * 精錬値[S+1]の失敗率</code>を使用しない。</li>
+				<li>精錬値[S]が終了精錬値の場合は<code>+ [N-1]回目に精錬値[S]になる確率 * 精錬値[S+1]の失敗率</code>を使用しない。
+					代わりに<code>[N-1]回目に精錬値[S]になる確率(= 前回までに成功している確率)</code>を加算する。</li>
 			</ul>
 								
 			<h3>ミラクル精錬</h3>
@@ -270,8 +270,7 @@
 			</p>
 			<code>[N]回目に精錬値[S]になる確率 = [N-1]回目に精錬値[S-1]になる確率 * 精錬値[S]の成功率</code>
 			<ul>
-				<li>精錬値[S]が終了精錬値の場合は<code>+ [N-1]回目に精錬値[S-1]になる確率 * 精錬値[S]の成功率</code>を使用しない。
-					代わりに<code>[N-1]回目に精錬値[S]になる確率</code>を加算する。</li>
+				<li>精錬値[S]が終了精錬値の場合は<code>[N-1]回目に精錬値[S]になる確率(= 前回までに成功している確率)</code>を加算する。</li>
 			</ul>
 
 			<!-- 本サイト上でない場合のみ表示 -->
