開始精錬値を下回らないオプションの追加

--- a/rotool/RORefine.html
+++ b/rotool/RORefine.html
@@ -190,8 +190,13 @@
 						</td>
 						<td class="identify">試行回数</td>
 						<td><input id="p_TryCount" class="numeric" value="100"/> 回
-							(<input id="p_OnlyLast" type="checkbox"/> 最終結果のみ表示)
 						</td>
+					</tr>
+					<tr>
+						<td class="identify">オプション</td>
+						<td><input id="p_KeepStartLevel" type="checkbox"/> 開始精錬値を下回らない(改良濃縮精錬のみ)</td>
+						<td></td>
+						<td><input id="p_OnlyLast" type="checkbox"/> 最終結果のみ表示</td>
 					</tr>
 				</tbody>
 			</table>
